# Qt

./: .gitignore  Backend.cpp  Backend.h  CMakeLists.txt  Main.qml  Main_copy.qml  ModeManager.cpp  ModeManager.h  ProgressManager.cpp  ProgressManager.h  README.md  main.cpp
